@@ -2,7 +2,7 @@
 //
 // Extractor.h: Rcpp R/C++ interface class library -- faster vectors (less interface)
 //
-// Copyright (C) 2010 - 2011 Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2010 - 2012 Dirk Eddelbuettel and Romain Francois
 //
 // This file is part of Rcpp.
 //
@@ -29,36 +29,7 @@ namespace traits {
     struct Extractor {
         typedef VECTOR type ;  
     } ;  
-
-    // apparently Rcpp::Fast upsets windows, so we stick with 
-    // the identity class above, meaning no fast indexing
-    // update 30 Oct 2010: that may have been g++ 4.5 rather than Windows
-    //                     so rephrasing text in terms of macro from RcppCommon.h
-//#ifndef WIN32
-#ifdef __GNUC__
-#ifndef IS_GCC_450_OR_LATER
-    template <> 
-    struct Extractor<INTSXP, true, Rcpp::Vector<INTSXP> >{
-        typedef Rcpp::Fast< Rcpp::Vector<INTSXP> > type ;
-    } ;
-    
-    template <> 
-    struct Extractor<REALSXP, true, Rcpp::Vector<REALSXP> >{
-        typedef Rcpp::Fast< Rcpp::Vector<REALSXP> > type ;
-    } ;
-    
-    template <> 
-    struct Extractor<LGLSXP, true, Rcpp::Vector<LGLSXP> >{
-        typedef Rcpp::Fast< Rcpp::Vector<LGLSXP> > type ;
-    } ;
-    
-    template <> 
-    struct Extractor<RAWSXP, true, Rcpp::Vector<RAWSXP> >{
-        typedef Rcpp::Fast< Rcpp::Vector<RAWSXP> > type ;
-    } ;
-#endif    
-#endif
-
+   
 } // traits
 } // Rcpp 
 
