@@ -1,3 +1,7 @@
+2012-02-03  Romain Francois  <romain@r-enthusiasts.com>
+
+        * inst/include/Rcpp/Extractor.h: rmove use of Fast in Extractor
+
 2012-02-01  Romain Francois  <romain@r-enthusiasts.com>
 
         * inst/include/Rcpp/iostream/Rostream.h: no need to include Rcpp.h
